Add new services to launch remote and modify preferences to help people to parameter their codes