@@ -1,6 +1,7 @@
 package org.madprod.freeboxmobile.remotecontrol;
 
 import java.io.IOException;   
+import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.HashMap;
@@ -11,6 +12,7 @@ import org.madprod.freeboxmobile.Constants;
 import android.app.Activity;
 import android.content.Context;
 import android.content.SharedPreferences;
+import android.os.Handler;
 import android.util.Log;
 
 @SuppressWarnings("serial")
@@ -19,8 +21,8 @@ public class CommandManager extends Activity implements Constants{
 	static final String TAG	= "FBM";
 	private static HashMap<String, Boolean> adresses = new HashMap<String, Boolean>(){
 		{
-			put("hd1.freebox.fr", true);
-			put("hd2.freebox.fr", true);			
+			put("hd1.freebox.fr", false);
+			put("hd2.freebox.fr", false);			
 		}
 	};
 
@@ -41,68 +43,37 @@ public class CommandManager extends Activity implements Constants{
 		return cm;
 	}
 
-//	public int refreshAdresses(){
-//		int count = 0;
-//		Log.d(TAG, "Rafraichissement des adresses");
-//		for (String adresse : adresses.keySet()){
-//			Log.d(TAG, "Adresse "+adresse);
-//			Socket s = new Socket();
-//			try {
-//				s.setSoTimeout(2000);
-//				s.connect(new InetSocketAddress(adresse, 80), 2000);
-//				adresses.put(adresse, true);
-//				count++;
-//				s.close();
-//			} catch (IOException e) {
-//				adresses.put(adresse, false);					
-//			}
-//			Log.d(TAG, "Result : "+adresses.get(adresse));
-//
-//		}
-//		Log.d(TAG, "Nb Boitiers OK : "+count);
-//		return count;
-//	}
-
-	public void sendCommand(String cmd, boolean longClick, int repeat){
+	public void sendCommand(String cmd, boolean longClick, int repeat) throws IOException{
 		sendCommand(cmd.trim()+"&long="+longClick+"&repeat="+repeat);
 	}
 
-	public void sendCommand(String cmd, boolean longClick){
+	public void sendCommand(String cmd, boolean longClick) throws IOException{
 		sendCommand(cmd.trim()+"&long="+longClick);		
 	}
 
-	public void sendCommand(String cmd, int repeat){
+	public void sendCommand(String cmd, int repeat) throws IOException{
 		sendCommand(cmd.trim()+"&repeat="+repeat);		
 	}
 
-	public void sendCommand(String cmd){
+	public void sendCommand(final String cmd) throws IOException{
 		Log.d(TAG, "Envoi de la commande : "+cmd);
-//		refreshAdresses();
 		for (String adresse : adresses.keySet()){
-			Log.d(TAG, "adresse : "+adresse);
-			Log.d(TAG, "etat : "+adresses.get(adresse));
-			Log.d(TAG, "code : "+codes.get(adresse));
-			if (adresses.get(adresse) && codes.get(adresse) != null){
-				Log.d(TAG, "Envoi a l adresse : "+adresse +" la commande : http://"+adresse+"/pub/remote_control?code="+codes.get(adresse)+"&key="+cmd);
-				try {
-//					URI uri = new URI("http://"+adresse+"/pub/remote_control?code="+codes.get(adresse)+"&key="+cmd);
-//					HttpGet methodGet = new HttpGet(uri);
-					URL url = new URL("http://"+adresse+"/pub/remote_control?code="+codes.get(adresse)+"&key="+cmd);
+			final String tmp = adresse;
+			Log.d(TAG, "adresse : "+tmp);
+			Log.d(TAG, "etat : "+adresses.get(tmp));
+			Log.d(TAG, "code : "+codes.get(tmp));
+			if (adresses.get(tmp) && codes.get(tmp) != null){
+				Log.d(TAG, "Envoi a l adresse : "+tmp +" la commande : http://"+tmp+"/pub/remote_control?code="+codes.get(tmp)+"&key="+cmd);
+					URL url = new URL("http://"+tmp+"/pub/remote_control?code="+codes.get(tmp)+"&key="+cmd);
 					URLConnection urlConn = url.openConnection(); 
-					urlConn.setDoInput(true); 
-					urlConn.setUseCaches(false);
+					urlConn.setReadTimeout(500);
+					urlConn.setConnectTimeout(500);
 					urlConn.getContentLength();
 
-					
-//					httpClient.execute(methodGet);																											
-//				} catch (URISyntaxException e) {
-//					e.printStackTrace();
-				} catch (ClientProtocolException e) {
-					e.printStackTrace();
-				} catch (IOException e) {
-					e.printStackTrace();
-				}
-			}			
+							
+						
+						
+			}
 		}
 	}
 
@@ -110,20 +81,24 @@ public class CommandManager extends Activity implements Constants{
 		Log.d(TAG, "Rafraichissement des codes");
 		
 		preferences = c.getSharedPreferences(KEY_PREFS, MODE_PRIVATE);
-//		.getDefaultSharedPreferences(c);
 
+		Log.d(TAG, "Preference : "+preferences);
 		
 		
 		if (preferences.getBoolean("boitier1_state", false)){
 			codes.put("hd1.freebox.fr", preferences.getString("boitier1_code", null));
+			adresses.put("hd1.freebox.fr", true);
 		}else{
 			codes.put("hd1.freebox.fr", null);				
+			adresses.put("hd1.freebox.fr", false);
 		}
 		Log.d(TAG, "Result : "+codes.get("hd1.freebox.fr"));
 
 		if (preferences.getBoolean("boitier2_state", false)){
+			adresses.put("hd2.freebox.fr", true);
 			codes.put("hd2.freebox.fr", preferences.getString("boitier2_code", null));
 		}else{
+			adresses.put("hd2.freebox.fr", false);
 			codes.put("hd2.freebox.fr", null);				
 		}
 		Log.d(TAG, "Result : "+codes.get("hd2.freebox.fr"));
